# Hyper-Reduced-LSPG

./: .gitignore  CMakeLists.txt  HRLSPG_INSTALL.sh  README.md
src/: CMakeLists.txt  burgers_rewienski.cpp  burgers_rewienski.hpp  galerkin_projection_rom.cpp  galerkin_projection_rom.hpp  halton.cpp  halton.hpp  main.cpp  snapshots.cpp  snapshots.hpp
src/misc/: CMakeLists.txt  eigen_utils.cpp  eigen_utils.hpp
src/tests/: 1D_burgers_rewienski_solution.cpp  1D_burgers_rewienski_solution.hpp  CMakeLists.txt  galerkin_projection_test.cpp  galerkin_projection_test.hpp  snapshots_test.cpp  snapshots_test.hpp
